@@ -7,7 +7,7 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-June 17, 2002 - January 14, 2004
+June 17, 2002 - March 3, 2004
 
 
 * Design and Coding:
@@ -75,6 +75,9 @@ June 17, 2002 - January 14, 2004
 
 
 * Translations
+
+  * Afrikaans
+    Petri Jooste <rkwjpj@puk.ac.za>
 
   * Basque
     Juan Irigoien <juanirigoien@irakasle.net>
