@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                        June 14, 2002 - January 14, 2004
+                         June 14, 2002 - March 3, 2004
 
      ----------------------------------------------------------------------
 
@@ -364,6 +364,8 @@ Options
                      +-------------------------------------------------+
                      |english             |american-english  |         |
                      |--------------------+------------------+---------|
+                     |afrikaans           |                  |         |
+                     |--------------------+------------------+---------|
                      |basque              |euskara           |         |
                      |--------------------+------------------+---------|
                      |bokmal              |                  |         |
@@ -567,6 +569,8 @@ Options
            |               |   (native name)   |   (English name)   |
            |---------------+-------------------+--------------------|
            |C              |                   |English             |
+           |---------------+-------------------+--------------------|
+           |af_ZA          |Afrikaans          |                    |
            |---------------+-------------------+--------------------|
            |ca_ES          |Catalan            |Catal`a             |
            |---------------+-------------------+--------------------|
