@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - January 14, 2004</p>
+<p>June 14, 2002 - March 3, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -469,6 +469,11 @@ New Breed Software</p>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
+	    <td><code>afrikaans</code></td>
+	    <td>&nbsp;</td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
 	    <td><code>basque</code></td>
 	    <td><code>euskara</code></td>
 	    <td>&nbsp;</td>
@@ -825,6 +830,11 @@ New Breed Software</p>
         <td><code>C</code></td>
 	<td>&nbsp;</td>
 	<td>English</td>
+      </tr>
+      <tr>
+        <td><code>af_ZA</code></td>
+	<td>Afrikaans</td>
+	<td>&nbsp;</td>
       </tr>
       <tr>
         <td><code>ca_ES</code></td>
