@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2003.12.23
-.TH TUXPAINT 1 "23 Dec 2003" "0.9.13" "Tux Paint"
+.\" tuxpaint.1 - 2004.03.03
+.TH TUXPAINT 1 "03 Mar 2004" "0.9.14" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -249,6 +249,9 @@ listed below:
 english | american-english
 .TP 2
 -
+afrikaans
+.TP 2
+-
 basque | euskara
 -
 bokmal
@@ -449,6 +452,7 @@ Juan Irigoien,
 Dmitriy Ivanov,
 Rasmus Erik Voel Jensen,
 Wang Jian,
+Petri Jooste,
 Kazuhiko,
 Mark Kim,
 Thomas Klausner,
